make new changes

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,18 +3,30 @@ project:
   output-dir: docs
 
 website:
-  title: "warmup-lexi-taylor"
+  title: "Lexi Taylor's Website Warmup"
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: about.qmd
+        text: About
+      - href: articles/index.qmd
+        text: Articles 
+
+  sidebar:
+    - id: articles
+      title: "Articles"
+      style: "docked"
+      background: light
+      collapse-level: 2
+      contents: 
+        - text: "Article One"
+          href:  articles/article_01.qmd
+        - text: "Article Two"
+          href:  articles/article_02.qmd
 
 format:
   html:
     theme: cosmo
     css: styles.css
     toc: true
-
-
-
