--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,13 +23,13 @@ website:
     contents:
       - section: "Articles"
         contents:
-          - index.qmd
+          - articles/index.qmd
           - articles/article_01.qmd
           - articles/article_02.qmd
           - articles/article_03.qmd
       - section: "Blog"
         contents:
-          - index.qmd
+          - blog/index.qmd
           - blog/blog_01.qmd
           - blog/blog_02.qmd
           - blog/blog_03.qmd
