--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,9 +14,8 @@ website:
       - href: articles/index.qmd
         text: Articles
       - href: blog/index.qmd
-        text: Blog
-
-
+        text: Blogs
+  
   sidebar:
     style: "docked"
     search: true
