--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,8 @@ website:
         text: About
       - href: articles/index.qmd
         text: Articles
+      - href: blog/index.qmd
+        text: Blog
   
   sidebar:
     style: "docked"
@@ -24,7 +26,7 @@ website:
           - articles/article_01.qmd
           - articles/article_02.qmd
           - articles/article_03.qmd
-          
+
 format:
   html:
     theme: flatly
