--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,7 +31,7 @@ website:
               href:  articles/article_01.qmd
             - text: "Recursion"
               href:  articles/article_02.qmd
-            - text: " Minor Enhancement"
+            - text: "Major Enhancement"
               href:  articles/article_03.qmd
         - section: "Posts"
           href: posts/index.qmd
