--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,8 +30,8 @@ website:
             text: "Navigating the Transition from College to Work"
           - href: posts/2023-11-17-animals-happiness
             text: "The Benefits of Animals in Your Life" 
-          - href: posts/2023-11-17-essay-modification
-            text: "Essay Modification"
+          - href: posts/2023-11-17-small-task
+            text: "Small Programming Task"
           - href: posts/2023-11-17-life-work
             text: "Finding Balance Between Life and Work"
           - href: posts/2023-11-17-minor-enhancement
